fixed spacing on header

--- a/css/style.scss
+++ b/css/style.scss
@@ -28,9 +28,9 @@
 // }
 .header-special{
 	font-family:$bodyfont;
-	font-size:2rem;
-	margin-bottom:-5%;
-	font-weight:600;
+	font-size:3rem;
+	font-weight:800;
+	margin: -2.5% auto;
 }
 .header-text{
 	margin:auto;
